--- a/debian/control
+++ b/debian/control
@@ -1,18 +1,18 @@
 ## Copyright (C) 2012 - 2023 ENCRYPTED SUPPORT LP <adrelanos@kicksecure.com>
 ## See the file COPYING for copying conditions.
 
-Source: user-admin-split
+Source: user-sysmaint-split
 Section: misc
 Priority: optional
 Maintainer: Patrick Schleizer <adrelanos@kicksecure.com>
 Build-Depends: debhelper (>= 13), debhelper-compat (= 13)
-Homepage: https://github.com/Kicksecure/user-admin-split
-Vcs-Browser: https://github.com/Kicksecure/user-admin-split
-Vcs-Git: https://github.com/Kicksecure/user-admin-split.git
+Homepage: https://github.com/Kicksecure/user-sysmaint-split
+Vcs-Browser: https://github.com/Kicksecure/user-sysmaint-split
+Vcs-Git: https://github.com/Kicksecure/user-sysmaint-split.git
 Standards-Version: 4.6.2
 Rules-Requires-Root: no
 
-Package: user-admin-split
+Package: user-sysmaint-split
 Architecture: all
 Depends: security-misc, ${misc:Depends}
 Description: Role-Based Boot Modes - user versus admin
