--- a/etc/permission-hardener.d/20_user-sysmaint-split.conf
+++ b/etc/permission-hardener.d/20_user-sysmaint-split.conf
@@ -3,20 +3,20 @@
 
 ## https://forums.whonix.org/t/restrict-root-access/7658/116
 ## This restricts the file permissions of the 'sudo' executable so that a vulnerability
-## in the program will not be exploitable by any users not in the "admin" group. 'sudo'
+## in the program will not be exploitable by any users not in the "sysmaint" group. 'sudo'
 ## is a very complex program and is 'setuid' so vulnerabilities in it can allow privilege
 ## escalation, regardless of other root access restrictions. For example, the following
 ## buffer overflow vulnerability could have been exploited by any user on the system:
 ## https://www.openwall.com/lists/oss-security/2021/01/26/3
-## With this restriction, only users explicitly permitted to use 'admin' by being added to
-## the "admin" group could exploit such vulnerabilities. For example, this would prevent a
+## With this restriction, only users explicitly permitted to use 'sysmaint' by being added to
+## the "sysmaint" group could exploit such vulnerabilities. For example, this would prevent a
 ## compromised network-facing daemon (such as web servers, time synchronization daemons,
 ## etc.) running as its own user from exploiting 'sudo' to escalate privileges.
-/usr/bin/sudo 4750 root admin
-/bin/sudo 4750 root admin
+/usr/bin/sudo 4750 root sysmaint
+/bin/sudo 4750 root sysmaint
 
-/usr/bin/pkexec 4750 root admin
-/bin/pkexec 4750 root admin
+/usr/bin/pkexec 4750 root sysmaint
+/bin/pkexec 4750 root sysmaint
 
 ## 'su' is already handled by permission-hardener default.
 ## 'su' does not have a whitelist entry by permission-hardener default.
