Work around limitations in passwd for unlocking passwordless accounts

--- a/usr/lib/systemd/system/non-sysmaint-boot.service
+++ b/usr/lib/systemd/system/non-sysmaint-boot.service
@@ -8,7 +8,7 @@ Before=multi-user.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/passwd --lock sysmaint
+ExecStart=/usr/libexec/user-sysmaint-split/sysmaint-password-control lock
 
 [Install]
 WantedBy=multi-user.target
