--- a/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
+++ b/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
@@ -1,6 +1,13 @@
 ## Copyright (C) 2024 - 2024 ENCRYPTED SUPPORT LP <adrelanos@whonix.org>
 ## See the file COPYING for copying conditions.
 
+## TODO: permission-hardener
+## Changes here must be manually reverted during un-installation in file:
+## debian/user-sysmaint-split.postrm
+## Until the following has been implemented:
+## Reset file attributes if no configuration matches #286
+## https://github.com/Kicksecure/security-misc/pull/286
+
 ## https://forums.whonix.org/t/restrict-root-access/7658/116
 ## This restricts the file permissions of the 'sudo' executable so that a vulnerability
 ## in the program will not be exploitable by any users not in the "sysmaint" group. 'sudo'
