add keywords to fix lintian warning

--- a/usr/share/xsessions/sysmaint-session.desktop
+++ b/usr/share/xsessions/sysmaint-session.desktop
@@ -5,3 +5,4 @@ Exec=/usr/libexec/user-sysmaint-split/sysmaint-session
 Icon=
 Type=Application
 DesktopNames=sysmaint-session
+Keywords=sysmaint;admin
