--- a/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
+++ b/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
@@ -4,10 +4,10 @@
 ## becoming duplicated.
 
 if [ "$GRUB_DISTRIBUTOR" = "Kicksecure" ]; then
-   GRUB_DISTRIBUTOR="Kicksecure PERSISTENT mode USER (For daily activities.)"
-elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Workstation (TM)" ]; then
+   GRUB_DISTRIBUTOR="Kicksecure (TM) PERSISTENT mode USER (For daily activities.)"
+elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Workstation" ]; then
    GRUB_DISTRIBUTOR="Whonix-Workstation (TM) PERSISTENT mode USER (For daily activities.)"
-elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Gateway (TM)" ]; then
+elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Gateway" ]; then
    GRUB_DISTRIBUTOR="Whonix-Gateway (TM) PERSISTENT mode USER (For daily activities.)"
 ## An 'else' condition is intentionally omitted, we want to leave
 ## GRUB_DISTRIBUTOR unmodified if all of the above matches fail.
