--- a/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
+++ b/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
@@ -9,6 +9,6 @@ elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Workstation" ]; then
    GRUB_DISTRIBUTOR="Whonix-Workstation (TM) PERSISTENT mode USER (For daily activities.)"
 elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Gateway" ]; then
    GRUB_DISTRIBUTOR="Whonix-Gateway (TM) PERSISTENT mode USER (For daily activities.)"
-## An 'else' condition is intentionally omitted, we want to leave
-## GRUB_DISTRIBUTOR unmodified if all of the above matches fail.
+else
+   true "$0: INFO: An 'else' condition is intentionally omitted, we want to leave GRUB_DISTRIBUTOR unmodified if all of the above matches fail."
 fi
