--- a/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
+++ b/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
@@ -2,7 +2,7 @@
 ## See the file COPYING for copying conditions.
 
 ## TODO: permission-hardener
-## Changes here must be manually reverted during un-installation in file:
+## Changes here must be manually reverted during uninstallation in file:
 ## debian/user-sysmaint-split.postrm
 ## Until the following has been implemented:
 ## Reset file attributes if no configuration matches #286
@@ -25,7 +25,7 @@
 
 ## 'su' is already handled by permission-hardener default.
 ## 'su' does not have a whitelist entry by permission-hardener default.
-## In result...
+## As a result...
 ##
 ## chmod-calc /usr/bin/su
 ##
@@ -39,9 +39,9 @@
 ## Public     Yes    No     No
 ##
 ## In summary:
-## - No 'su' is longer SUID.
-## - Group, public lacks permission to execute it.
-## - Therefore 'su' does not require a special mention in this file
+## - 'su' is no longer SUID.
+## - Group and public lack permission to execute it.
+## - Therefore 'su' does not require a special mention in this file.
 ##
-## In case you need to use 'su'. See also:
+## In case you need to use 'su,' see also:
 ## https://www.kicksecure.com/wiki/root#su
