--- a/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
+++ b/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
@@ -23,6 +23,12 @@
 
 /usr/bin/pkexec 4750 root sysmaint
 
+## TODO:
+## See also:
+## /usr/lib/permission-hardener.d/25_default_whitelist_policykit.conf
+#/usr/lib/policykit-1/polkit-agent-helper-1 4750 root sysmaint
+#/lib/policykit-1/polkit-agent-helper-1 4750 root sysmaint
+
 ## 'su' is already handled by permission-hardener default.
 ## 'su' does not have a whitelist entry by permission-hardener default.
 ## As a result...
