add `Breaks: qubes-core-agent-passwordless-root`
to simplify installation of `user-sysmaint-split`,
to automatically remove `qubes-core-agent-passwordless-root` once
`sudo apt isntall user-sysmaint-split`.

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Rules-Requires-Root: no
 Package: user-sysmaint-split
 Architecture: all
 Depends: security-misc, adduser, ${misc:Depends}
+Breaks: qubes-core-agent-passwordless-root
 Description: Role-Based Boot Modes - user versus sysmaint
  Adds a GRUB boot menu entry "PERSISTENT mode SYSMAINT
  (For system maintenance tasks.)"
