--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Rules-Requires-Root: no
 Package: user-sysmaint-split
 Architecture: all
 Depends: security-misc, adduser, ${misc:Depends}
-Breaks: qubes-core-agent-passwordless-root
+Breaks: qubes-core-agent-passwordless-root (>= 1)
 Description: Role-Based Boot Modes - user versus sysmaint
  Adds a GRUB boot menu entry "PERSISTENT mode SYSMAINT
  (For system maintenance tasks.)"
