--- a/usr/lib/systemd/system/sysmaint-boot.service
+++ b/usr/lib/systemd/system/sysmaint-boot.service
@@ -5,6 +5,8 @@
 Description=Hook for sysmaint account lock/unlock
 Before=multi-user.target
 Before=sysmaint-boot.target
+Before=graphical.target
+Before=rads.service
 
 [Service]
 Type=oneshot
