Try to prevent a race between sysmaint-boot and qubes-gui-agent

--- a/usr/lib/systemd/system/sysmaint-boot.service
+++ b/usr/lib/systemd/system/sysmaint-boot.service
@@ -9,6 +9,7 @@ Before=getty.target
 Before=graphical.target
 Before=rads.service
 Before=sysinit.target
+Before=qubes-gui-agent.service
 Wants=local-fs.target
 After=local-fs.target
 DefaultDependencies=no
