--- a/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
+++ b/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
@@ -3,13 +3,13 @@
 ## *twice* during an update-grub, which would result in the appended string
 ## becoming duplicated.
 
-grub_distributor_appendix="- PERSISTENT Mode - USER Session (For daily activities.)"
+grub_distributor_appendix="PERSISTENT Mode - USER Session (For daily activities.)"
 if [ "$GRUB_DISTRIBUTOR" = "Kicksecure" ]; then
-   GRUB_DISTRIBUTOR="Kicksecure (TM) $grub_distributor_appendix"
+   GRUB_DISTRIBUTOR="$grub_distributor_appendix"
 elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Workstation" ]; then
-   GRUB_DISTRIBUTOR="Whonix-Workstation (TM) $grub_distributor_appendix"
+   GRUB_DISTRIBUTOR="$grub_distributor_appendix"
 elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Gateway" ]; then
-   GRUB_DISTRIBUTOR="Whonix-Gateway (TM) $grub_distributor_appendix"
+   GRUB_DISTRIBUTOR="$grub_distributor_appendix"
 else
    true "$0: INFO: An 'else' condition is intentionally omitted, we want to leave GRUB_DISTRIBUTOR unmodified if all of the above matches fail."
 fi
