--- a/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
+++ b/usr/share/user-sysmaint-split/conf/default_grub.d_50_persistent_mode_entry.cfg
@@ -3,7 +3,7 @@
 ## *twice* during an update-grub, which would result in the appended string
 ## becoming duplicated.
 
-grub_distributor_appendix="PERSISTENT Mode | USER Session | For daily activities"
+grub_distributor_appendix="PERSISTENT Mode | USER Session | daily activities"
 if [ "$GRUB_DISTRIBUTOR" = "Kicksecure" ]; then
    GRUB_DISTRIBUTOR="$grub_distributor_appendix"
 elif [ "$GRUB_DISTRIBUTOR" = "Whonix-Workstation" ]; then
