--- a/debian/control
+++ b/debian/control
@@ -18,11 +18,11 @@ Pre-Depends: helper-scripts
 Depends: security-misc, adduser, ${misc:Depends}
 Breaks: qubes-core-agent-passwordless-root (>= 1)
 Description: Role-Based Boot Modes - user versus sysmaint
- Adds a GRUB boot menu entry "PERSISTENT mode SYSMAINT
- (For system maintenance tasks.)"
+ Adds a GRUB boot menu entry:
+ "PERSISTENT Mode | SYSMAINT Session | system maintenance tasks"
  .
- Makes Privilege Escalation Tools (such as sudo, su,
- pkexec) inaccessible to limited user accounts such as account "user".
+ Makes Privilege Escalation Tools (such as 'sudo', 'su', 'pkexec')
+ inaccessible to limited user accounts such as account "user".
  .
  Adds kernel parameter "boot-role=sysmaint" and
  "systemd.unit=sysmaint-boot.target".
