--- a/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
+++ b/usr/lib/permission-hardener.d/20_user-sysmaint-split.conf
@@ -16,6 +16,8 @@
 
 /usr/bin/pkexec 4750 root sysmaint
 
+/usr/bin/su-to-root 4750 root sysmaint
+
 ## '/usr/lib/policykit-1/polkit-agent-helper-1'
 ## - is a symlink to: '../polkit-1/polkit-agent-helper-1'
 ## - real path is: '/usr/lib/polkit-1/polkit-agent-helper-1'
