Improve exposure of info and error messages in sysmaint-boot.service

--- a/usr/lib/systemd/system/sysmaint-boot.service
+++ b/usr/lib/systemd/system/sysmaint-boot.service
@@ -18,6 +18,8 @@ DefaultDependencies=no
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/libexec/user-sysmaint-split/sysmaint-boot handle-boot
+StandardOutput=journal+console
+StandardError=inherit
 
 [Install]
 WantedBy=basic.target
