fix: add `After=systemd-tmpfiles-setup.service`
Wait for 'systemd-tmpfiles-setup.service' to parse '/usr/lib/tmpfiles.d/qrexec-volatile-config.conf' folder '/run/qubes-rpc' exists.

--- a/usr/lib/systemd/system/sysmaint-boot.service
+++ b/usr/lib/systemd/system/sysmaint-boot.service
@@ -12,6 +12,12 @@ Before=sysinit.target
 Before=qubes-gui-agent.service
 Wants=local-fs.target
 After=local-fs.target
+
+## Wait for 'systemd-tmpfiles-setup.service' to parse
+## '/usr/lib/tmpfiles.d/qrexec-volatile-config.conf'
+## so folder '/run/qubes-rpc' exists.
+After=systemd-tmpfiles-setup.service
+
 DefaultDependencies=no
 
 [Service]
